--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 <!--Google map-->
-<script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChUep-XpAWl6rJB0TZ3QroJqmyejs_ZL4&callback=console.debug&libraries=maps,marker&v=beta">
-</script>
 
 <script src="map.js"></script>
 
@@ -38,15 +36,17 @@
 
 <body>
  
-  <div class="container-fluid">
-    <nav class="navbar navbar-default navv">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <i class="fa-solid fa-bars"></i>                       
-          </button>
-          <a class="navbar-brand" href="#"> <img src="images/logoaniks.png" alt="logo" class="logoimg">
-            <span class="scent">Scent By Anike</span></a>
-        </div>
+  
+  <nav class="navbar navv">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <i class="fa-solid fa-bars"></i>                       
+      </button>
+      <div class="margint">
+      <img src="images/logoaniks.png" alt="logo" class="logoimg">
+   
+      <a href="#" class="scent"> Scent By Anike </a>
+      </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right liist">
             <li><a href="index.html" class="liist2" data-toggle="tooltip" data-placement="bottom" title="Home">HOME</a></li>
